@@ -49,6 +49,7 @@ Unreleased Version 2.2.1-pre
  * Fix: Make log file on Windows log non-ASCII symbols properly.
  * Fix: Don't reorder listing servers when sorting by title in the browse tab.
  * Feature: Remember last sorting on the browse page. Thanks Bluestrings and Meiren for suggesting.
+ * Fix: Only ask for confirmation when a self-signed TLS certificate changes, not when a "real" one renews. Thanks Bluestrings and Pepper for reporting.
 
 2024-01-13 Version 2.2.0
  * Server Fix: Add --ssl-key-algorithm parameter to allow non-RSA SSL keys, defaulting to guessing the most common formats RSA and EC. Thanks Bluestrings for reporting.
